# mcv_lab2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lab2_novec  lab2_novec.cpp  lab2_opencv.cpp  lab2_vec.cpp
